--- a/packages/eyes-common-legacy/package.json
+++ b/packages/eyes-common-legacy/package.json
@@ -51,7 +51,7 @@
     "typescript": "^3.6.4"
   },
   "scripts": {
-    "vv": "node ../../scripts/verify-versions.js",
+    "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
     "test": "npm run test:unit",
