--- a/packages/eyes-common/package.json
+++ b/packages/eyes-common/package.json
@@ -43,7 +43,7 @@
     "mocha": "^6.2.2"
   },
   "scripts": {
-    "vv": "node ../../scripts/verify-versions.js",
+    "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
