--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -42,7 +42,7 @@
     "protractor": "^6.0.0-beta"
   },
   "scripts": {
-    "vv": "node ../../scripts/verify-versions.js",
+    "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
