--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -49,7 +49,7 @@
     "tunnel": false
   },
   "scripts": {
-    "vv": "node ../../scripts/verify-versions.js",
+    "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
