--- a/packages/eyes-webdriverio-5-service/package.json
+++ b/packages/eyes-webdriverio-5-service/package.json
@@ -34,7 +34,7 @@
     "wdio-chromedriver-service": "^5.0.2"
   },
   "scripts": {
-    "vv": "node ../../scripts/verify-versions.js",
+    "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
     "test": "wdio tests/wdio.conf.js",
