--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -7,7 +7,7 @@
     "eyes-setup": "./bin/eyes-setup.js"
   },
   "scripts": {
-    "vv": "node ../../scripts/verify-versions.js",
+    "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
     "render": "run(){ npx cypress run --config integrationFolder=tests/fixtures/testApp/cypress/render,pluginsFile=tests/fixtures/testApp/cypress/plugins/index-render.js,supportFile=tests/fixtures/testApp/cypress/support/index-run.js --env url=$1; }; run",
