--- a/packages/eyes-selenium-3/package.json
+++ b/packages/eyes-selenium-3/package.json
@@ -60,7 +60,7 @@
     "selenium-webdriver": "< 4.0.0"
   },
   "scripts": {
-    "vv": "node ../../scripts/verify-versions.js",
+    "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
     "test": "npm run test:unit && npm run test:e2e",
