--- a/packages/eyes-webdriverio-4-service/package.json
+++ b/packages/eyes-webdriverio-4-service/package.json
@@ -7,7 +7,7 @@
   ],
   "main": "index.js",
   "scripts": {
-    "vv": "node ../../scripts/verify-versions.js",
+    "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
     "test": "wdio test/wdio.conf.js",
