--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -42,7 +42,7 @@
   "devDependencies": {
     "@applitools/sdk-release-kit": "0.1.0",
     "@applitools/sdk-fake-eyes-server": "1.0.5",
-    "@applitools/sdk-test-kit": "^1.0.17",
+    "@applitools/sdk-test-kit": "1.0.17",
     "chromedriver": "^80.0.0",
     "eslint": "^6.8.0",
     "geckodriver": "^1.19.1",
@@ -54,17 +54,18 @@
     "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
+    "send-release-notification": "bongo --send-release-notification",
     "lint": "eslint '**/*.js'",
     "test": "yarn test:unit && yarn test:e2e",
     "test:e2e": "mocha --no-timeouts \"test/+(TestClassicApi*.js|TestFluentApi*.js|TestVisualGrid*.js)\"",
     "test:it": "mocha --no-timeouts \"test/it/*.js\"",
     "test:unit": "mocha \"test/unit/**/*.js\"",
-    "test:coverage": "coverage-tests run --path test/coverage/index.js",
+    "test:coverage": "coverage-tests run --path test/coverage/index.js --filterIndexes 3,6,7,8,9,10,11,12,13,16,17,18,21,22,24,25,27,28,29,30,31,32,33,34,35,36,37,39,40,41,42,45,48,51,54,57,60,61,64,65,67,68,69,73,78,79,80,84,85,86,87,88,89,90,93,95,96,97,98,99,102,103,104,105,106,109,110,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,137",
     "test:coverage:nuke": "coverage-tests nuke",
     "render": "node scripts/render.js",
-    "postpublish": "git push; git push --tags",
-    "preversion": "yarn vv && yarn vc",
-    "version": "yarn uc && git add CHANGELOG.md"
+    "preversion": "yarn vv && yarn vc && yarn test:coverage --send-report prod",
+    "version": "yarn uc && git add CHANGELOG.md",
+    "postpublish": "git push && git push --tags && yarn send-release-notification"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
