added Region toPersistedRegions() and refactor tests

--- a/packages/eyes-common/package.json
+++ b/packages/eyes-common/package.json
@@ -49,6 +49,7 @@
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
+    "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
     "postpublish": "git push; git push --tags",
     "preversion": "yarn vv && yarv vc",
     "version": "yarn uc && git add CHANGELOG.md"
