--- a/packages/eyes-common/package.json
+++ b/packages/eyes-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes-common",
-  "version": "3.19.0",
+  "version": "3.20.0",
   "description": "Utilities for working with Eyes JavaScript SDK and the visual grid",
   "keywords": [
     "applitools",
@@ -51,7 +51,7 @@
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
     "postpublish": "git push; git push --tags",
-    "preversion": "yarn vv && yarv vc",
+    "preversion": "yarn vv && yarn vc",
     "version": "yarn uc && git add CHANGELOG.md"
   },
   "license": "SEE LICENSE IN LICENSE",
