--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -7,14 +7,16 @@
     "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
+    "send-release-notification": "bongo --send-release-notification",
     "lint": "eslint '**/*.js'",
     "test": "yarn test:unit && yarn test:e2e",
     "test:e2e": "mocha --no-timeouts \"test/+(TestClassicApi*.js|TestFluentApi*.js|TestVisualGrid*.js)\"",
     "test:it": "mocha --no-timeouts \"test/it/*.js\"",
     "test:unit": "mocha \"test/unit/**/*.js\"",
-    "postpublish": "git push; git push --tags",
-    "preversion": "yarn vv && yarn vc",
-    "version": "yarn uc && git add CHANGELOG.md"
+    "test:coverage": "coverage-tests run --path test/coverage/index.js --filterIndexes 0,1,6,7,8,9,10,11,16,17,18,27,30,31,32,33,36,39,42,60,61,78,79,80,109,114,129,130,131,137",
+    "preversion": "yarn vv && yarn vc && yarn test:coverage --send-report prod",
+    "version": "yarn uc && git add CHANGELOG.md",
+    "postpublish": "git push && git push --tags && yarn send-release-notification"
   },
   "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
   "license": "SEE LICENSE IN LICENSE",
@@ -31,6 +33,7 @@
     "webdriverio": "~4.14.4"
   },
   "devDependencies": {
+    "@applitools/sdk-test-kit": "1.0.17",
     "@applitools/sdk-release-kit": "0.1.0",
     "@applitools/sdk-fake-eyes-server": "1.0.5",
     "chromedriver": "^80.0.0",
