--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes-testcafe",
-  "version": "2.0.0-beta.15",
+  "version": "2.0.0-bata.16",
   "description": "Applitools Eyes SDK for Testcafe",
   "homepage": "https://applitools.com",
   "author": {
@@ -25,11 +25,11 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/dom-utils": "4.7.6",
-    "@applitools/eyes-common": "3.18.5",
-    "@applitools/eyes-sdk-core": "8.0.0",
+    "@applitools/dom-utils": "4.7.7",
+    "@applitools/eyes-common": "3.20.1",
+    "@applitools/eyes-sdk-core": "8.1.1",
     "@applitools/functional-commons": "1.5.4",
-    "@applitools/visual-grid-client": "13.5.19",
+    "@applitools/visual-grid-client": "13.6.0",
     "rimraf": "^3.0.0"
   },
   "peerDependencies": {
@@ -70,9 +70,9 @@
     "version": "yarn uc && git add CHANGELOG.md"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.1.0",
     "@applitools/dom-capture": "^7.1.2",
     "@applitools/sdk-fake-eyes-server": "1.0.5",
+    "@applitools/sdk-release-kit": "0.1.0",
     "@applitools/sdk-test-kit": "^1.0.17",
     "@babel/plugin-transform-async-to-generator": "^7.7.4",
     "@babel/plugin-transform-regenerator": "^7.7.5",
