--- a/src/core/package.json
+++ b/src/core/package.json
@@ -31,7 +31,7 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/eyes-common": "file:./core",
+    "@applitools/eyes-common": "file:../common",
     "@applitools/isomorphic-fetch": "3.0.0",
     "axios": "0.19.2",
     "chalk": "3.0.0",
@@ -39,8 +39,8 @@
     "tunnel": "0.0.6"
   },
   "devDependencies": {
-    "@applitools/sdk-fake-eyes-server": "1.0.5",
-    "@applitools/sdk-release-kit": "0.1.0",
+    "@applitools/sdk-fake-eyes-server": "file:../../packages/sdk-fake-eyes-server",
+    "@applitools/sdk-release-kit": "file:../../packages/sdk-release-kit",
     "chai": "4.2.0",
     "chai-uuid": "1.0.6",
     "mocha": "7.0.1"
