--- a/src/common/package.json
+++ b/src/common/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@applitools/eyes-common",
   "version": "3.20.1",
+  "private": true,
   "description": "Utilities for working with Eyes JavaScript SDK and the visual grid",
   "keywords": [
     "applitools",
