--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -42,9 +42,9 @@
     "@applitools/visual-grid-client": "13.6.4"
   },
   "devDependencies": {
-    "@applitools/sdk-fake-eyes-server": "file:../sdk-fake-eyes-server",
-    "@applitools/sdk-release-kit": "file:../sdk-release-kit",
-    "@applitools/sdk-test-kit": "file:../sdk-test-kit",
+    "@applitools/sdk-fake-eyes-server": "file:../../src/fake-eyes-server",
+    "@applitools/sdk-release-kit": "file:../../src/release-kit",
+    "@applitools/sdk-test-kit": "file:../../src/test-kit",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
