updated internal package refs

--- a/src/common/package.json
+++ b/src/common/package.json
@@ -39,7 +39,7 @@
     "stack-trace": "^0.0.10"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "file:../../packages/sdk-release-kit",
+    "@applitools/sdk-release-kit": "file:../release-kit",
     "chai": "^4.2.0",
     "mocha": "^6.2.2"
   },
