--- a/packages/eyes-leanft/package.json
+++ b/packages/eyes-leanft/package.json
@@ -33,11 +33,11 @@
   ],
   "main": "./bundle.js",
   "dependencies": {
-    "eyes.utils": "0.0.29",
-    "eyes.sdk": "0.0.71"
+    "eyes.utils": "portal:../../src/common-legacy",
+    "eyes.sdk": "portal:../../src/core-legacy"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.1.0",
+    "@applitools/sdk-release-kit": "portal:../../src/release-kit",
     "mocha": "^5.2.0",
     "uglify-js": "^3.4.0",
     "webpack": "^3.12.0",
