--- a/packages/eyes-images-legacy/package.json
+++ b/packages/eyes-images-legacy/package.json
@@ -40,11 +40,11 @@
   "main": "./index.js",
   "types": "./typings/index.d.ts",
   "dependencies": {
-    "eyes.sdk": "^4.0.5",
-    "eyes.utils": "^3.8.1"
+    "eyes.sdk": "portal:../../src/core-legacy",
+    "eyes.utils": "portal:../../src/common-legacy"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.1.0",
+    "@applitools/sdk-release-kit": "portal:../../src/release-kit",
     "@types/node": "*",
     "browserify": "^16.5.0",
     "browserify-fs": "^1.0.0",
