--- a/packages/eyes-selenium-3/package.json
+++ b/packages/eyes-selenium-3/package.json
@@ -44,11 +44,11 @@
   "main": "./index.js",
   "types": "./typings/index.d.ts",
   "dependencies": {
-    "eyes.sdk": "^4.0.5",
-    "eyes.utils": "^3.8.1"
+    "eyes.sdk": "portal:../../src/core-legacy",
+    "eyes.utils": "portal:../../src/common-legacy"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.1.0",
+    "@applitools/sdk-release-kit": "portal:../../src/release-kit",
     "@types/node": "*",
     "chromedriver": "^80.0.1",
     "mocha": "^6.2.2",
