--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -25,9 +25,9 @@
   },
   "main": "./index.js",
   "dependencies": {
-    "@applitools/dom-utils": "4.7.7",
-    "@applitools/eyes-common": "3.20.1",
-    "@applitools/eyes-sdk-core": "8.1.1",
+    "@applitools/dom-utils": "portal:../../src/dom-utils",
+    "@applitools/eyes-common": "portal:../../src/common",
+    "@applitools/eyes-sdk-core": "portal:../../src/core",
     "@applitools/functional-commons": "1.5.4",
     "@applitools/visual-grid-client": "13.6.0",
     "rimraf": "^3.0.0"
@@ -72,7 +72,7 @@
   "devDependencies": {
     "@applitools/dom-capture": "^7.1.2",
     "@applitools/sdk-fake-eyes-server": "1.0.5",
-    "@applitools/sdk-release-kit": "0.1.0",
+    "@applitools/sdk-release-kit": "portal:../../src/release-kit",
     "@applitools/sdk-test-kit": "^1.0.17",
     "@babel/plugin-transform-async-to-generator": "^7.7.4",
     "@babel/plugin-transform-regenerator": "^7.7.5",
