--- a/packages/eyes-webdriverio-5-service/package.json
+++ b/packages/eyes-webdriverio-5-service/package.json
@@ -23,7 +23,7 @@
     "@applitools/eyes-webdriverio": "5.9.12"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.1.0",
+    "@applitools/sdk-release-kit": "portal:../../src/release-kit",
     "@wdio/cli": "^5.18.6",
     "@wdio/dot-reporter": "^5.18.6",
     "@wdio/local-runner": "^5.18.6",
