--- a/packages/side-eyes/package.json
+++ b/packages/side-eyes/package.json
@@ -42,7 +42,7 @@
     "testURL": "http://localhost"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.1.0",
+    "@applitools/sdk-release-kit": "portal:../../src/release-kit",
     "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
