--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -49,7 +49,7 @@
     "@applitools/jsdom": false
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.1.0",
+    "@applitools/sdk-release-kit": "portal:../../src/release-kit",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
     "cookie-parser": "^1.4.4",
