--- a/src/dom-utils/package.json
+++ b/src/dom-utils/package.json
@@ -30,7 +30,7 @@
     "axios": "^0.19.0"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.1.0",
+    "@applitools/sdk-release-kit": "portal:../release-kit",
     "chromedriver": "^80.0.0",
     "mocha": "^6.2.2",
     "selenium-webdriver": "^4.0.0-alpha.5"
