--- a/src/fake-eyes-server/package.json
+++ b/src/fake-eyes-server/package.json
@@ -45,7 +45,7 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@applitools/sdk-release-kit": "0.1.0",
+    "@applitools/sdk-release-kit": "portal:../release-kit",
     "chai": "^4.2.0",
     "mocha": "^7.0.0"
   }
