--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -60,6 +60,7 @@
     "selenium-webdriver": "^4.0.0-alpha.5"
   },
   "scripts": {
+    "build": "bongo --build",
     "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
