re-added src packages to workspaces to remove the need for installing inside of a package

--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   },
   "private": true,
   "workspaces": [
+    "src/common",
+    "src/common-legacy",
+    "src/core",
+    "src/core-legacy",
+    "src/dom-utils",
+    "src/fake-eyes-server",
+    "src/release-kit",
+    "src/test-kit",
     "packages/dom-capture",
     "packages/eyes-images",
     "packages/eyes-selenium",
