--- a/packages/eyes-sdk-core-legacy/package.json
+++ b/packages/eyes-sdk-core-legacy/package.json
@@ -39,7 +39,7 @@
   "main": "./index.js",
   "types": "./typings/index.d.ts",
   "dependencies": {
-    "eyes.utils": "^3.8.1",
+    "eyes.utils": "3.8.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
