--- a/packages/eyes-selenium-3/package.json
+++ b/packages/eyes-selenium-3/package.json
@@ -44,8 +44,8 @@
   "main": "./index.js",
   "types": "./typings/index.d.ts",
   "dependencies": {
-    "eyes.sdk": "^4.0.5",
-    "eyes.utils": "^3.8.1"
+    "eyes.sdk": "4.0.5",
+    "eyes.utils": "3.8.1"
   },
   "devDependencies": {
     "@applitools/sdk-release-kit": "0.1.0",
