add dom-snapshot to workspace

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "workspaces": [
     "packages/dom-capture",
+    "packages/dom-snapshot",
     "packages/dom-utils",
     "packages/eyes-common",
     "packages/eyes-images",
