--- a/packages/dom-capture/package.json
+++ b/packages/dom-capture/package.json
@@ -2,7 +2,7 @@
   "name": "@applitools/dom-capture",
   "version": "7.1.3",
   "main": "index.js",
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "scripts": {
     "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
@@ -60,5 +60,9 @@
   },
   "dependencies": {
     "@applitools/functional-commons": "^1.5.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/applitools/eyes.sdk.javascript1.git"
   }
 }
