--- a/packages/dom-snapshot/package.json
+++ b/packages/dom-snapshot/package.json
@@ -40,7 +40,6 @@
     "chai": "^4.2.0",
     "core-js": "^3.6.4",
     "cors": "^2.8.5",
-    "css-tree": "^1.0.0-alpha.39",
     "cssom": "^0.4.4",
     "eslint": "^6.8.0",
     "eslint-plugin-mocha-no-only": "1.0.0",
@@ -67,6 +66,7 @@
     "whatwg-fetch": "^3.0.0"
   },
   "dependencies": {
-    "@applitools/functional-commons": "^1.5.4"
+    "@applitools/functional-commons": "^1.5.4",
+    "css-tree": "^1.0.0-alpha.39"
   }
 }
