--- a/packages/sdk-release-kit/package.json
+++ b/packages/sdk-release-kit/package.json
@@ -27,8 +27,9 @@
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
   },
   "dependencies": {
-    "yargs": "^15.0.2",
-    "node-fetch": "^2.6.0"
+    "chalk": "^3.0.0",
+    "node-fetch": "^2.6.0",
+    "yargs": "^15.0.2"
   },
   "devDependencies": {
     "mocha": "^6.2.2"
