--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -10,6 +10,7 @@
     "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
+    "verify-commits": "bongo --verify-commits",
     "render": "run(){ npx cypress run --config integrationFolder=tests/fixtures/testApp/cypress/render,pluginsFile=tests/fixtures/testApp/cypress/plugins/index-render.js,supportFile=tests/fixtures/testApp/cypress/support/index-run.js --env url=$1; }; run",
     "test:mocha": "mocha --no-timeouts 'tests/**/*.test.js'",
     "test:unit": "mocha --no-timeouts 'tests/unit/**/*.test.js'",
@@ -26,7 +27,7 @@
     "changelog:init": "git config changelog.format \"* %s [[%h]($(echo $npm_package_repository_url|cut -d+ -f2|cut -d. -f1-2)/commit/%H)]\"",
     "changelog:install": "sudo apt-get install git-extras",
     "postpublish": "git push; git push --tags",
-    "preversion": "yarn vv && yarn vc",
+    "preversion": "yarn vv && yarn vc && yarn verify-commits",
     "version": "yarn uc && git add CHANGELOG.md"
   },
   "files": [
