--- a/packages/eyes-images-legacy/package.json
+++ b/packages/eyes-images-legacy/package.json
@@ -58,6 +58,7 @@
     "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
+    "verify-commits": "bongo --verify-commits",
     "test": "npm run test:e2e",
     "test:e2e": "node test/simplerun.js",
     "build": "npm run browserify && npm run uglify",
@@ -65,7 +66,7 @@
     "uglify": "uglifyjs dist/eyes-browser.js > dist/eyes-browser.min.js",
     "typings": "tsc --declaration",
     "postpublish": "git push; git push --tags",
-    "preversion": "yarn vv && yarn vc",
+    "preversion": "yarn vv && yarn vc && yarn verify-commits",
     "version": "yarn uc && git add CHANGELOG.md"
   },
   "license": "SEE LICENSE IN LICENSE",
