--- a/packages/side-eyes/package.json
+++ b/packages/side-eyes/package.json
@@ -7,6 +7,7 @@
     "vv": "bongo --verify-versions",
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
+    "verify-commits": "bongo --verify-commits",
     "lint": "eslint webpack.config.babel.js src/ --ext .js --ext .jsx",
     "start": "webpack-dev-server --hot",
     "build": "yarn build:page && webpack",
@@ -28,7 +29,7 @@
     "release": "(./scripts/deploy.js && node scripts/gh-release.js && yarn release:amo && yarn release:cws);exit 0;",
     "release:amo": "cd build && web-ext-submit",
     "release:cws": "cd build && webstore upload --auto-publish",
-    "preversion": "yarn vv && yarn vc",
+    "preversion": "yarn vv && yarn vc && yarn verify-commits",
     "version": "node scripts/version.js && git add src/manifest.json && yarn uc && git add CHANGELOG.md"
   },
   "jest": {
