--- a/packages/eyes-webdriverio-4-service/package.json
+++ b/packages/eyes-webdriverio-4-service/package.json
@@ -19,15 +19,15 @@
   "author": "",
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
-    "@applitools/eyes.webdriverio": "2.11.6"
+    "@applitools/eyes.webdriverio": "2.12.5"
   },
   "devDependencies": {
     "@applitools/sdk-release-kit": "0.1.0",
     "chromedriver": "^80.0.0",
     "mocha": "^6.2.2",
+    "wdio-chromedriver-service": "^0.1.5",
     "wdio-dot-reporter": "0.0.10",
     "wdio-mocha-framework": "^0.6.4",
-    "wdio-selenium-standalone-service": "0.0.12",
     "wdio-sync": "^0.7.3",
     "webdriverio": "^4.14.4"
   },
