all packages: Updated the publishing scripts to use postversion instead of postpublish in order to have new verion tags get pushed correctly. Also consolidated `git push && git push --tags` to just `git push --follow-tags`

--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -26,9 +26,9 @@
     "changelog": "git changelog -x -p -f v$npm_package_version > History.md && git add ./History.md && git commit -am 'changelog'",
     "changelog:init": "git config changelog.format \"* %s [[%h]($(echo $npm_package_repository_url|cut -d+ -f2|cut -d. -f1-2)/commit/%H)]\"",
     "changelog:install": "sudo apt-get install git-extras",
-    "postpublish": "git push; git push --tags",
     "preversion": "yarn vv && yarn vc && yarn verify-commits",
-    "version": "yarn uc && git add CHANGELOG.md"
+    "version": "yarn uc && git add CHANGELOG.md",
+    "postversion": "git push --follow-tags"
   },
   "files": [
     "src",
