--- a/packages/eyes-webdriverio-4-service/package.json
+++ b/packages/eyes-webdriverio-4-service/package.json
@@ -12,9 +12,9 @@
     "uc": "bongo --update-changelog",
     "verify-commits": "bongo --verify-commits",
     "test": "wdio test/wdio.conf.js",
-    "postpublish": "git push; git push --tags",
     "preversion": "yarn vv && yarn vc && yarn verify-commits",
-    "version": "yarn uc && git add CHANGELOG.md"
+    "version": "yarn uc && git add CHANGELOG.md",
+    "postversion": "git push --follow-tags"
   },
   "author": "",
   "license": "SEE LICENSE IN LICENSE",
