--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -67,7 +67,7 @@
     "render": "node scripts/render.js",
     "preversion": "yarn vv && yarn vc && yarn verify-commits && yarn test:coverage --send-report prod",
     "version": "yarn uc && git add CHANGELOG.md",
-    "postpublish": "git push && git push --tags && yarn send-release-notification"
+    "postversion": "git push --follow-tags && yarn send-release-notification"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
