--- a/packages/eyes-webdriverio-5-service/package.json
+++ b/packages/eyes-webdriverio-5-service/package.json
@@ -20,16 +20,16 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@applitools/eyes-webdriverio": "5.9.17"
+    "@applitools/eyes-webdriverio": "5.9.22"
   },
   "devDependencies": {
     "@applitools/sdk-release-kit": "0.1.0",
-    "@wdio/cli": "^5.18.6",
-    "@wdio/dot-reporter": "^5.18.6",
-    "@wdio/local-runner": "^5.18.6",
-    "@wdio/mocha-framework": "^5.18.6",
-    "@wdio/sync": "^5.18.6",
-    "chromedriver": "^80.0.0",
+    "@wdio/cli": "5.18.6",
+    "@wdio/dot-reporter": "5.18.6",
+    "@wdio/local-runner": "5.18.6",
+    "@wdio/mocha-framework": "5.18.6",
+    "@wdio/sync": "5.18.6",
+    "chromedriver": "^80.0.1",
     "mocha": "^6.2.2",
     "wdio-chromedriver-service": "^5.0.2"
   },
