--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -44,7 +44,7 @@
   "devDependencies": {
     "@applitools/sdk-fake-eyes-server": "1.0.5",
     "@applitools/sdk-release-kit": "0.1.0",
-    "@applitools/sdk-test-kit": "^1.0.14",
+    "@applitools/sdk-test-kit": "1.0.17",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
