Pub workflow improvements: pack -> install -> verify installed versions (#147)
* release-kit: added first pass on the pack & install script

* release-kit: added setup script to create dot-folder for the release-kit

* added ignore for release-kit dot-folder

* release-kit: first pass on --verify-installed-versions

* release-kit: removed extraneous console.log statements

* release-kit: removed extraneous require

* release-kit: cleaned up for readability

* release-kit: cleaned up setup

* release-kit: removed the need to lazy load scripts

* release-kit: add --release-pre-check which encompasses all of the verify scripts

* wdio5: wired up release-pre-check and dropped the individual verification scripts

* release-kit: wrapped the cli in an async iife to clean up some of the code

* release-kit: added micromatch

* release-kit: fixed false positive in verify-installed-versions script when looking up entries by package name

* removed debugger statement

* wdio5: fixed typo in script

* release-kit: added ls-dry-run to display output of installed deps from a dry-run, and updated error output from verify-installed-versions to notify the user that this is an available option to get more info

* all packages: update to use release-pre-check

* release-kit: send cwd to sendReleaseNotification

* release-kit: removed errant debugger

* release-kit: removed chdir after verify-installed-versions since it is unneeded -- it happens in the context of the forked process

* release-kit: for pack-install, write the packed file into .bongo before installing

* release-kit: filter verify-installed-versions to just internal packages

--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -51,10 +51,7 @@
     "shared-examples-for": "^0.1.3"
   },
   "scripts": {
-    "vv": "bongo --verify-versions",
-    "vc": "bongo --verify-changelog",
-    "uc": "bongo --update-changelog",
-    "verify-commits": "bongo --verify-commits",
+    "release-pre-check": "bongo --release-pre-check",
     "send-release-notification": "bongo --send-release-notification",
     "lint": "eslint '**/*.js'",
     "test": "yarn test:unit && yarn test:e2e",
@@ -65,7 +62,7 @@
     "test:coverage:custom": "mocha \"test/coverage/custom/**/*.spec.js\" --no-timeouts",
     "test:coverage:nuke": "coverage-tests nuke",
     "render": "node scripts/render.js",
-    "preversion": "yarn vv && yarn vc && yarn verify-commits && yarn test:coverage --send-report prod",
+    "preversion": "yarn release-pre-check && yarn test:coverage --send-report prod",
     "version": "yarn uc && git add CHANGELOG.md",
     "postversion": "git push --follow-tags && yarn send-release-notification"
   },
