--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes-testcafe",
-  "private": true,
+  "private": false,
   "version": "2.0.0-beta.18",
   "description": "Applitools Eyes SDK for Testcafe",
   "homepage": "https://applitools.com",
@@ -74,6 +74,7 @@
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
+    "chalk": "^3.0.0",
     "chromedriver": "^78.0.0",
     "core-js": "^3.6.1",
     "dotenv": "^8.2.0",
@@ -91,7 +92,7 @@
     "testcafe-browser-provider-saucelabs": "^1.8.0",
     "ua-parser-js": "^0.7.20",
     "url-polyfill": "^1.1.7",
-    "whatwg-fetch": "^3.0.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "whatwg-fetch": "^3.0.0"
   }
 }
