--- a/packages/dom-snapshot/package.json
+++ b/packages/dom-snapshot/package.json
@@ -9,7 +9,7 @@
     "eslint:node": "eslint '**/*.js' --ignore-pattern 'src/browser'",
     "eslint:browser": "eslint -c 'src/browser/.eslintrc.json' 'src/browser/**/*.js'",
     "eslint": "yarn eslint:node && yarn eslint:browser",
-    "test": "yarn eslint && yarn test:mocha",
+    "test": "yarn test:mocha && yarn eslint",
     "build": "rollup -c rollup.config.js",
     "build:watch": "rollup -c rollup.config.js --watch",
     "surge": "surge tests/fixtures applitools-dom-snapshot.surge.sh",
